--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,16 @@
-$common-padding:15px;
-$active-color:#226792;
-$normal-color:#999;
+$common-padding: 15px;
+$active-color: #226792;
+$normal-color: #999;
+
+/*
+ 颜色
+*/
+$color-title-font: #49618e;
+$color-body-font: #2c2c2c;
+$color-sub-font: #818181;
+$color-review-bg:#efefef;
+$color-review-line:#d5d5d5;
+$color-review-body-font:#484848;
 /*
    箭头
 */
@@ -10,66 +20,60 @@ $size,
 
 $color, $size2:$size) {
 
-    width: 0;
+  width: 0;
 
-    height: 0;
+  height: 0;
 
-    line-height: 0;
+  line-height: 0;
 
-    font-size: 0;
+  font-size: 0;
 
-    overflow: hidden;
+  overflow: hidden;
 
-    border-width: $size;
+  border-width: $size;
 
-    cursor: pointer;
+  cursor: pointer;
 
-    @if $direction==top {
+  @if $direction==top {
 
-        border-style: dashed dashed solid dashed;
+    border-style: dashed dashed solid dashed;
 
-        border-color: transparent transparent $color transparent;
+    border-color: transparent transparent $color transparent;
 
-        border-top: none;
+    border-top: none;
 
-        border-bottom-width: $size2;
+    border-bottom-width: $size2;
 
-    }
+  } @else if $direction==bottom {
 
-    @else if $direction==bottom {
+    border-style: solid dashed dashed dashed;
 
-        border-style: solid dashed dashed dashed;
+    border-color: $color transparent transparent transparent;
 
-        border-color: $color transparent transparent transparent;
+    border-bottom: none;
 
-        border-bottom: none;
+    border-top-width: $size2;
 
-        border-top-width: $size2;
+  } @else if $direction==right {
 
-    }
+    border-style: dashed dashed dashed solid;
 
-    @else if $direction==right {
+    border-color: transparent transparent transparent $color;
 
-        border-style: dashed dashed dashed solid;
+    border-right: none;
 
-        border-color: transparent transparent transparent $color;
+    border-left-width: $size2;
 
-        border-right: none;
+  } @else if $direction==left {
 
-        border-left-width: $size2;
+    border-style: dashed solid dashed dashed;
 
-    }
+    border-color: transparent $color transparent transparent;
 
-    @else if $direction==left {
+    border-left: none;
 
-        border-style: dashed solid dashed dashed;
+    border-right-width: $size2;
 
-        border-color: transparent $color transparent transparent;
-
-        border-left: none;
-
-        border-right-width: $size2;
-
-    }
+  }
 
 }
