--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,15 @@
 html, body, #root {
   height: 100%;
   background-color: #fff;
+  font-family: Serif, Georgia, "Times New Roman";
 }
-*{
+
+* {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-img{
+
+img {
   width: 12px;
 }
